[gd_scene load_steps=5 format=2]

[ext_resource path="res://car.tscn" type="PackedScene" id=1]
[ext_resource path="res://road.tres" type="TileSet" id=2]
[ext_resource path="res://MultiTargetCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://map.gd" type="Script" id=4]

[node name="Map" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -65538, 0, 851973, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 786437, -3, 0, 851973, -2, 0, 196611, -1, 0, 786436, -65536, 0, 786436, -65535, 0, 786436, -65534, 0, 786436, -65533, 0, 786436, -65532, 0, 786436, -65531, 0, 786436, -65530, 0, 786436, -65529, 0, 786436, -65528, 0, 262147, -65527, 0, 786437, 65533, 0, 851972, 65534, 0, 786436, 65535, 0, 786436, 0, 0, 458756, 1, 0, 589827, 2, 0, 589827, 3, 0, 589827, 4, 0, 589827, 5, 0, 589827, 6, 0, 393220, 7, 0, 786436, 8, 0, 786436, 9, 0, 720900, 131069, 0, 851972, 131070, 0, 786436, 131071, 0, 458756, 65536, 0, 589828, 65542, 0, 655364, 65543, 0, 393220, 65544, 0, 786436, 65545, 0, 720900, 196605, 0, 851972, 196606, 0, 786436, 196607, 0, 720900, 131079, 0, 851972, 131080, 0, 786436, 131081, 0, 720900, 262141, 0, 851972, 262142, 0, 786436, 262143, 0, 262147, 196608, 0, 786437, 196614, 0, 851973, 196615, 0, 196611, 196616, 0, 786436, 196617, 0, 720900, 327677, 0, 851972, 327678, 0, 786436, 327679, 0, 786436, 262144, 0, 262147, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 196611, 262151, 0, 786436, 262152, 0, 786436, 262153, 0, 720900, 393213, 0, 655364, 393214, 0, 393220, 393215, 0, 786436, 327680, 0, 786436, 327681, 0, 786436, 327682, 0, 786436, 327683, 0, 786436, 327684, 0, 786436, 327685, 0, 786436, 327686, 0, 786436, 327687, 0, 786436, 327688, 0, 458756, 327689, 0, 589828, 458750, 0, 655364, 458751, 0, 589827, 393216, 0, 589827, 393217, 0, 589827, 393218, 0, 589827, 393219, 0, 589827, 393220, 0, 589827, 393221, 0, 589827, 393222, 0, 589827, 393223, 0, 589827, 393224, 0, 589828 )

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 16.288 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( -2.87436, -118.807 )
player_id = 2

[node name="MultiTargetCamera" parent="." instance=ExtResource( 3 )]
